feat(favorites): get user's favorite hotels
