# src/modules/users/user.routes.js
@@ -2,9 +2,15 @@ import { Router } from 'express'
 import validate from 'express-validation'
 import * as userController from './user.controllers'
 import userValidation from './user.validations'
-import { authLocal } from '../../services/auth'
+import { authLocal, authJwt, isFavoritesOwner } from '../../services/auth'
 
 const routes = new Router()
+routes.get(
+  '/:id/favorites',
+  authJwt,
+  isFavoritesOwner,
+  userController.getFavorites
+)
 routes.post('/signup', validate(userValidation.signup), userController.signUp)
 routes.post('/login', authLocal, userController.login)
 
